fix(query): allow null bindings in NativeQuery record (List.copyOf rejects nulls)